[package]
name = "serde_tran"
version = "0.1.1"
edition = "2021"
authors = ["caojen <netid.caojen@gmail.com>"]
description = "helper to serde your data into encoded bytes"
license = "MIT"

[features]
# by default, we enable json and base64
default = ["serde_json", "base64"]
# note: when json is enabled, please enable excactly one of [`base64`, `bs58`]
# when no-hash-validate is enabled, the hash will not be applied to serialized data
no-hash-validate = []

[dependencies]
bincode = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
bs58 = { version = "0.5", optional = true }
derive_more = { version = "0.99" }

[dev-dependencies]
rand = { version = "0.8.5" }
anyhow = { version = "1" }
